26-04-2010
----------
* Added Folder.require_rel(relative_path, source dir)

This is nice when fx requiring test helpers
Folder.require_rel 'spec/spec_helper', __FILE__

18-03-2010
----------
* Added Folder.enter_here(__FILE__) method
  - helps game/game.rb work, by changing context after it is required from spec in the spec context so that paths are relative to game and not spec!
* Put fixtures folder outside spec. It still works!

05-03-2010
----------
* Fixed minor issue with enter method to yield self, not path string
* Fixed README tutorials to use do_require method
* Added require_all convenience method

03-03-2010
----------
Added a powerful require DSL

17-11-2009
----------
Created unit tests to ensure all util functions work as expected. Fixed a number of bugs.

14-11-2009
----------
* Initial release with two helper functions:

- Require.folder(name, options)

name    : the name (or path) of a top-level folder. 
options : a hash containing specific options for applying the require (all optional)
          :include      - regular expression to match on .rb filenames to require 
          :exclude      - regular expression to match on .rb filenames to NOT require
          :recursive    - whether to do a recursive traversal of directories
          :folder_list  - list of folders under main folder (name argument) to process (in list order)
             

